# rust_thebook

./: .gitignore  README.md  chapter4_03_slices.md  chapter4_QA.md  copy_vs_clone.md
project/: rust_ddd_learning_guide.md
project/chapter10/: chapter10_01_generics.md  chapter10_02_traits.md  chapter10_03_lifetimes.md  chapter10_QA_01_generics.md  chapter10_QA_02_traits.md  chapter10_QA_03_lifetimes.md
project/chapter11/: chapter11_01_writing_tests.md  chapter11_02_running_tests.md  chapter11_03_test_organization.md  chapter11_QA_01_writing_tests.md  chapter11_QA_02_running_tests.md  chapter11_QA_03_test_organization.md
project/chapter12/: chapter12_01_project_setup.md  chapter12_02_refactoring.md  chapter12_03_tdd_and_features.md  chapter12_QA_01_basics.md  chapter12_QA_02_types_and_errors.md  chapter12_QA_03_features.md
project/chapter13/: chapter13_01_closures.md  chapter13_02_iterators.md  chapter13_03_performance.md  chapter13_QA_01_closures.md
project/chapter14/: chapter14_01_cargo_basics.md  chapter14_02_crates_io.md  chapter14_03_workspaces.md  chapter14_QA_01_modules_and_publishing.md  chapter14_QA_02_crates_io_operations.md  chapter14_QA_03_cargo_ecosystem.md
project/chapter14/cargo_and_crates/: Cargo.toml
project/chapter14/cargo_and_crates/src/: lib.rs
project/chapter15/: chapter15_01_box.md  chapter15_02_deref.md  chapter15_03_drop.md  chapter15_04_rc.md  chapter15_05_refcell.md  chapter15_06_weak.md  chapter15_QA.md
project/chapter16/: chapter16_01_threads.md  chapter16_02_message_passing.md  chapter16_03_shared_state.md  chapter16_QA_01.md  (+3 more)
(+120 files in other folders)
