[package]
name = "cargo_and_crates_test"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

